--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".IntrinsicSizeDemoActivity"
+            android:name=".CoroutineActivity"
             android:exported="true"
-            android:label="@string/title_activity_intrinsic_size_demo"
+            android:label="@string/title_activity_coroutine"
             android:theme="@style/Theme.MyApplication" >
 
             <intent-filter>
@@ -23,15 +23,20 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
+        </activity>
+        <activity
+            android:name=".IntrinsicSizeDemoActivity"
+            android:exported="true"
+            android:label="@string/title_activity_intrinsic_size_demo"
+            android:theme="@style/Theme.MyApplication">
+
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyApplication">
-
-        </activity>
+            android:theme="@style/Theme.MyApplication"></activity>
     </application>
 
 </manifest>
