--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".CoroutineActivity"
+            android:name=".LazyListActivity"
             android:exported="true"
-            android:label="@string/title_activity_coroutine"
+            android:label="@string/title_activity_lazy_list"
             android:theme="@style/Theme.MyApplication" >
 
             <intent-filter>
@@ -23,20 +23,24 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".CoroutineActivity"
+            android:exported="true"
+            android:label="@string/title_activity_coroutine"
+            android:theme="@style/Theme.MyApplication">
 
         </activity>
         <activity
             android:name=".IntrinsicSizeDemoActivity"
             android:exported="true"
             android:label="@string/title_activity_intrinsic_size_demo"
-            android:theme="@style/Theme.MyApplication">
-
-        </activity>
+            android:theme="@style/Theme.MyApplication"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyApplication"></activity>
+            android:theme="@style/Theme.MyApplication" />
     </application>
 
 </manifest>
