--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,16 +15,22 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".LazyListDemo"
+            android:name=".IntroductionViewModelActivity"
             android:exported="true"
-            android:label="@string/title_activity_lazy_list_demo"
-            android:theme="@style/Theme.MyApplication">
-
+            android:label="@string/title_activity_introduction_view_model"
+            android:theme="@style/Theme.MyApplication" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LazyListDemo"
+            android:exported="true"
+            android:label="@string/title_activity_lazy_list_demo"
+            android:theme="@style/Theme.MyApplication">
+
         </activity>
         <activity
             android:name=".ListDemoActivity"
@@ -35,9 +41,7 @@
             android:name=".LazyListActivity"
             android:exported="true"
             android:label="@string/title_activity_lazy_list"
-            android:theme="@style/Theme.MyApplication">
-
-        </activity>
+            android:theme="@style/Theme.MyApplication"/>
         <activity
             android:name=".CoroutineActivity"
             android:exported="true"
