--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".ViewModelDemoActivity"
+            android:name=".roomdemo.RoomDemoActivity"
             android:exported="true"
-            android:label="@string/title_activity_view_model_demo"
+            android:label="@string/title_activity_room_demo"
             android:theme="@style/Theme.MyApplication">
 
             <intent-filter>
@@ -28,17 +28,22 @@
 
         </activity>
         <activity
-            android:name=".IntroductionViewModelActivity"
+            android:name=".ViewModelDemoActivity"
             android:exported="true"
-            android:label="@string/title_activity_introduction_view_model"
+            android:label="@string/title_activity_view_model_demo"
             android:theme="@style/Theme.MyApplication">
 
         </activity>
         <activity
+            android:name=".IntroductionViewModelActivity"
+            android:exported="true"
+            android:label="@string/title_activity_introduction_view_model"
+            android:theme="@style/Theme.MyApplication"></activity>
+        <activity
             android:name=".LazyListDemo"
             android:exported="true"
             android:label="@string/title_activity_lazy_list_demo"
-            android:theme="@style/Theme.MyApplication"></activity>
+            android:theme="@style/Theme.MyApplication" />
         <activity
             android:name=".ListDemoActivity"
             android:exported="false"
