--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".navigationdemo.MainActivity"
+            android:name=".bottombardemo.MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.MyApplication" >
@@ -25,20 +25,24 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".navigationdemo.MainActivity"
+            android:exported="true"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.MyApplication">
 
         </activity>
         <activity
             android:name=".roomdemo.RoomDemoActivity"
             android:exported="true"
             android:label="@string/title_activity_room_demo"
-            android:theme="@style/Theme.MyApplication">
-
-        </activity>
+            android:theme="@style/Theme.MyApplication"></activity>
         <activity
             android:name=".ViewModelDemoActivity"
             android:exported="true"
             android:label="@string/title_activity_view_model_demo"
-            android:theme="@style/Theme.MyApplication"></activity>
+            android:theme="@style/Theme.MyApplication" />
         <activity
             android:name=".IntroductionViewModelActivity"
             android:exported="true"
